# Thesis25

./: .gitignore  Dockerfile  HowTo.md  README.md  config.yaml  get_config.py  pyproject.toml  run_all_snakemake.sh
data/: README.md
src/automation_scripts/: init.py  run_associate_biopsies.py  run_mask_generation.py  run_patch_generation.py  run_patch_registration.py  run_preprocess.py  run_registration.py
src/preprocessing/: associate_biopsies.py  image_registration.py  mask_binary.py  patches_generation.py
src/snakemake/: associate_biopsies_smk.py  image_registration_smk.py  mask_binary_smk.py  patch_generation_smk.py  run_all_snakemake.py
src/snakemake/rules/: binary_mask.smk  patch_gen.smk  register.smk
src/utils/: os_lib.py  patient_class.py  patient_utils.py
